@@ -301,4 +301,5 @@ in 0.1.13.
  setter)
 - volume fraction of solvent can now be used when constructing a Slab from a
  Scatterer.
-- Fully remove traces from graph when opening new experiments
+- Fully remove traces from graph when opening new experiments.
+- Store reduction_options when processing spectra.
